domain pointed to index

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -29,7 +29,7 @@
     </tr>
 
     <tr>
-      <td>Ancestry</td>
+      <td>Parent</td>
       <td>
         <% @category&.ancestors.each do |ans| %>
           <%= ans.name %>
