Multiple parent child fixed

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -29,11 +29,9 @@
     </tr>
 
     <tr>
-      <td>Parent</td>
+      <td>Children</td>
       <td>
-        <% @category&.ancestors.each do |ans| %>
-          <%= ans.name %>
-        <% end %>
+        <%= list_children(@category) %>
       </td>
     </tr>
   </table>
