--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -4,25 +4,25 @@
 
 <table class="ui celled table">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Summary</th>
-      <th>Ancestry</th>
-      <th class="center aligned" colspan="3">Action</th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th>Summary</th>
+    <th>Parents</th>
+    <th class="center aligned" colspan="3">Action</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= category.name %></td>
-        <td><%= category.summary %></td>
-        <td><%= category.ancestry %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <% @categories.each do |category| %>
+    <tr>
+      <td><%= category.name %></td>
+      <td><%= category.summary %></td>
+      <td><%= list_ancestors(category) %></td>
+      <td><%= link_to 'Show', category %></td>
+      <td><%= link_to 'Edit', edit_category_path(category) %></td>
+      <td><%= link_to 'Destroy', category, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+    </tr>
+  <% end %>
   </tbody>
   <tfoot>
   <tr>
